# transact-former

./: .gitignore  Makefile  README.md  generate_dataset.py  pyproject.toml
model/: config.py  data.py  model.py  trainer.py
tools/: generate_dataset.py
tsformer/: config.py  data.py  evaluate.py  inference.py  model.py  plots.py  predict.py  scaling_analysis.py  train_pipeline.py  trainer.py
