[project]
name = "transact-former"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "faker>=40.13.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.11",
    "scikit-learn>=1.8.0",
    "torch>=2.2,<2.4",
    "umap-learn>=0.5.12",
]
